k8s/postgres-read/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-read
  namespace: banking
spec:
  serviceName: postgres-read-headless
  replicas: 1
  selector:
    matchLabels:
      app: postgres-read
  template:
    metadata:
      labels:
        app: postgres-read
    spec:
      containers:
        - name: postgres-read
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - name: postgres-read-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-read-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
