k8s/postgres-read/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-read
  namespace: banking
spec:
  type: ClusterIP
  selector:
    app: postgres-read
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-read-headless
  namespace: banking
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: postgres-read
  ports:
    - port: 5432
      targetPort: 5432
